# shadow-companion

./: .gitignore  README.md  build.sh  codedb.snapshot  generate_icons.py  package.json  perry.toml  shadow.py
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts
raycast-extension/src/: adjust-speed.tsx  control.tsx  lib.ts  switch-provider.tsx  switch-voice.tsx
src/: main.ts
tts-worker-rs/: Cargo.toml
tts-worker-rs/src/: audio.rs  codec.rs  espeak.rs  llm.rs  main.rs  paths.rs  phonemize.rs  playlog.rs  protocol.rs  stream.rs
