[package]
name = "tts-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tts-worker"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { version = "0.1.146", default-features = false }
ort = { version = "=2.0.0-rc.12" }
cpal = "0.18.1"
rtrb = "0.3.4"
libloading = "0.9.0"
npyz = { version = "0.9.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hound = "3.5.1"
libc = "0.2"
ndarray = "0.16"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
